# GenAi_DSS

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TECHNICAL_REPORT.md  debug_output.txt  prompts_log.json  pyproject.toml  story_output.json
examples/rickshaw_accident/: character_configs.json  seed_story.json
src/: .env  config.py  main.py  schemas.py  story_state.py
src/agents/: base_agent.py  character_agent.py  director_agent.py
src/graph/: narrative_graph.py
src/prompts/: character_prompts.py  director_prompts.py
